# smartspend-backend

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 1eda53150f25_initial_schema.py  7ab3cdc1b72e_remove_sidebar_collapsed.py  b66e65d9221b_fix_check_constraints_for_frozen_items.py  c001_seed_reference_data.py  c002_seed_smartspend_sets.py  c003_add_username.py  c004_seed_articles.py  c005_article_reads.py  c006_frontend_requests.py  c007_batch_updates.py  c008_article_notes.py  c009_kopilka_modules.py  c010_deposit_comments.py  c011_promo_fields.py  c012_seed_kopilka.py  c013_user_settings.py  c014_bank_abbr.py  c015_fix_company_cats.py  c016_card_spending.py  c017_deposit_tariff.py  c018_notifications_rework.py  c019_fix_notif_seed.py  c020_notif_soft_delete.py  c021_inventory_fields.py  c022_relax_constraints.py  c023_oauth_fields.py  c023_set_notes.py  c024_uploads.py  c025_emoji_reactions.py  c026_rework_inventory_groups.py  c027_ss_sets_author.py  c028_ss_username.py  c029_envelope_scale.py  c030_inv_base_price_period.py  c031_oauth_states.py  c032_oauth_links.py  c033_oauth_primary.py  c034_set_parent.py  c035_inventory_notes.py  c036_article_bookmarks.py  (+13 more)
src/app/: admin.py  main.py
src/app/core/: config.py  database.py  dependencies.py  security.py
src/app/models/: __init__.py  article.py  article_bookmark.py  article_comment.py  article_note.py  article_photo.py  article_read.py  article_set_link.py  card.py  company.py  deposit.py  deposit_comment.py  enums.py  envelope.py  envelope_category.py  follow.py  inventory_group.py  inventory_item.py  inventory_note.py  notification.py  notification_message.py  oauth_state.py  promo.py  reaction.py  saved_set.py  set.py  set_comment.py  set_note.py  set_photo.py  upload.py  user.py  user_finance.py  user_oauth_link.py
src/app/schemas/: auth.py  (+15 more)
tests/: conftest.py  test_db_article.py  test_db_user.py  test_schemas.py  test_security.py
(+48 files in other folders)
